# bootcamp-dbt

./: README.md  pyproject.toml  tabelas.sql
northwind/models/marts/: mart_orders_summaty.sql  vendas.sql
northwind/models/staging/: _stg__models.yml  _stg__sources.yml  stg_customers.sql  stg_orders.sql
northwind/models/staging/crm/: stg_crm__nova_tabela.sql
northwind/seeds/: nova_tabela.csv  region.csv
